# LinAl-Calc

./: .gitignore  CMakeLists.txt  Least Squares.cbp  Least Squares.depend  Least Squares.layout  README.md  linal.cbp  linal.depend  linal.layout  main.cpp
include/: Action.h  Defines.h  InputUtils.h  MathHelpers.h  Matrix.h  Object.h  Parser.h  Runtime.h  StdMathLib.h  TextualHelpers.h  Value.h  Vector.h
src/: Action.cpp  InputUtils.cpp  Matrix.cpp  Object.cpp  Parser.cpp  Runtime.cpp  Value.cpp  Vector.cpp
